@@ -1,6 +1,8 @@
 2010-06-04 Homer Xing <homer.xing@gmail.com>
 
     * Improve architecture. Do not need to manually update AILURUS_VERSION.
+    * Add dbus daemon version. Check dbus daemon status by reading version.
+    
 
 2010-06-02 Homer Xing <homer.xing@gmail.com>
 
